--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ crate-type = ["cdylib", "rlib"]
 js-sys = "0.3.61"
 wasm-bindgen = "0.2.84"
 wasm-bindgen-futures = "0.4.34"
+serde = { version = "1.0", features = ["derive"] }
+tsify-next = { version = "0.5.4", features = ["js"] }
 
 [features]
 default = []
